gitops/apps/flag/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flag
  labels:
    application: flag
